# libtensor

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
benchmark/: CMakeLists.txt
benchmark/src/: filter.cc  operator.cc
libtensor/: filter.hh  libtensor.hh
libtensor/core/: decl.hh  functor.hh  shape.hh  tensor.hh
test/: CMakeLists.txt
test/src/: base.cc  filter.cc  operator.cc
